Added files via upload

--- a/headtrackr4.html
+++ b/headtrackr4.html
@@ -84,8 +84,8 @@
 		<div id="content">		
 			<div id="container">
 				<script src="../js/utils.js"></script>				
-				<script type="text/javascript" src="../js/clmtrackr.js"></script>				
-				<script type="text/javascript" src="../models/model_spca_20_svm.js"></script>
+				<script type="text/javascript" src="/js/clmtrackr.js"></script>				
+				<script type="text/javascript" src="/models/model_spca_20_svm.js"></script>
 
 				<video id="videoel" width="640" height="480" preload="auto" loop="" ></video>
 				<canvas id="overlay" width="640" height="480"></canvas>
