Added files via upload

--- a/headtrackr4.html
+++ b/headtrackr4.html
@@ -83,9 +83,9 @@
 	<body>
 		<div id="content">		
 			<div id="container">
-				<script src="https://earendil10.github.io/headtracker/js/utils.js"></script>				
-				<script type="text/javascript" src="https://earendil10.github.io/headtracker/js/clm.js"></script>				
-				<script type="text/javascript" src="https://earendil10.github.io/headtracker/models/model_spca_20_svm.js"></script>
+				<script src="/headtracker/js/utils.js"></script>				
+				<script type="text/javascript" src="/headtracker/js/clm.js"></script>				
+				<script type="text/javascript" src="/headtracker/models/model_spca_20_svm.js"></script>
 
 				<video id="videoel" width="640" height="480" preload="auto" loop="" ></video>
 				<canvas id="overlay" width="640" height="480"></canvas>
