Added files via upload

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset='UTF-8'/>
 		<title>TFG Head/Face Tracker</title>
-		<link rel="stylesheet" href="/styles/estilo.css">
+		<link rel="stylesheet" href="/headtracker/styles/estilo.css">
 	</head>
 	<body>
 		<div >
