--- a/headtrackr1.html
+++ b/headtrackr1.html
@@ -42,12 +42,12 @@
 	<style type="text/css">#xLabsCanvas{pointer-events:none;top:0;left:0;position:fixed;z-index:2147483646;}#xLabsCanvas.allow-pointer{pointer-events:auto;}</style>
 	
 	<!-- This includes Flocking and all its dependencies, including jQuery 2.1.3 and Infusion -->
-    <script src="/dist/flocking-all.js"></script>    
-    <script src="/sounds/impulse.js" type="text/javascript"></script>
+    <script src="/headtracker/dist/flocking-all.js"></script>    
+    <script src="/headtracker/sounds/impulse.js" type="text/javascript"></script>
 
 </head>
 <body>
-	<script src="./js/headtrackr.js"></script>
+	<script src="/headtracker/js/headtrackr.js"></script>
 	
 	<canvas id="compare" width="640" height="480" style="display:none"></canvas>
 	<video id="vid" autoplay="" loop="" width="640" height="480"></video>
