Added files via upload

--- a/pruebas.html
+++ b/pruebas.html
@@ -11,7 +11,7 @@
 		<div id='contenido'>
 			<header>
 				<hgroup>
-					<h1 class="titulo">TFG HeadTracker & EyeTracker</h1>
+					<h1>TFG HeadTracker & EyeTracker</h1>
 				</hgroup>
 			</header>
 			<nav>
@@ -23,19 +23,25 @@
 			</nav>
 			<section>
 				<div id='textoPr'>					
-					<p>Esta página a sido creada para seguir de cerca los avances en el TFG Estudio de validación de software eyetracker y headtracker para interacción web en JavaScript.</p>
+					<h1>HeadTracker</h1>
 					<hr>
-					<br>
-					<p>Autor: Andrés Sánchez</p>
-					<p>Tutor: Fernando Vilariño</p>
-					<p>Artista digital: Dan Norton</p>
-					<footer>
-						<p class='final'>Universidad Autónoma de Barcelona, 2016</p>
-					</footer>
+					<ul>
+						<li>
+							<a class="pruebas" href="prueba1.html">HeadTracker</a>
+							<p>Head tracker con ruido</p>
+						</li>
+						<li>
+							<a class="pruebas" href="prueba2.html">FaceTracker</a>
+							<p>Face tracker con colores</p>
+						</li>
+					</ul>
+					<hr>
+					<h1>EyeTracker</h1>		
+					<hr>
+					<p>En desarrollo</p>						
 				</div>
-			</section>								
+			</section>			
 		</div>
-
 	</body>
 </html>
 
