--- a/pruebas.html
+++ b/pruebas.html
@@ -27,11 +27,11 @@
 					<hr>
 					<ul>
 						<li>
-							<a class="pruebas" href="headtracker1.html">HeadTracker</a>
+							<a class="pruebas" href="headtrackr1.html">HeadTracker</a>
 							<p>Head tracker con ruido</p>
 						</li>
 						<li>
-							<a class="pruebas" href="headtracker4.html">FaceTracker</a>
+							<a class="pruebas" href="headtrackr4.html">FaceTracker</a>
 							<p>Face tracker con colores</p>
 						</li>
 					</ul>
