--- a/pruebas.html
+++ b/pruebas.html
@@ -18,7 +18,7 @@
 				<ul>
 					<li><a class="navegador" href='index.html'>Inicio</a></li>
 					<li><a class="navegador" href='pruebas.html'>Pruebas</a></li>
-					<li><a class="navegador" href='contacto.html'>Contacto</a></li>
+					<li><a class="navegador" href='#'>Contacto</a></li>
 				</ul>
 			</nav>
 			<section>
