--- a/pruebas.html
+++ b/pruebas.html
@@ -28,17 +28,27 @@
 					<ul>
 						<li>
 							<a class="pruebas" href="headtrackr1.html">HeadTracker</a>
-							<p>Head tracker con ruido</p>
-						</li>
-						<li>
-							<a class="pruebas" href="headtrackr4.html">FaceTracker</a>
-							<p>Face tracker con colores</p>
+							<p>HeadTracker con ruido</p>
 						</li>
 					</ul>
 					<hr>
-					<h1>EyeTracker</h1>		
+					<h1>FaceTracker</h1>
 					<hr>
-					<p>En desarrollo</p>						
+					<ul>
+						<li>
+							<a class="pruebas" href="headtrackr4.html">FaceTracker - Color</a>
+							<p>FaceTracker con colores</p>
+						</li>
+						<li>
+							<a class="pruebas" href="headtrackr6.html">FaceTracker - Objects</a>
+							<p>FaceTracker con objetos</p>
+						</li>
+						<li>
+							<a class="pruebas" href="headtrackr5.html">FaceTracker - AutoCalibration</a>
+							<p>FaceTracker con colores - Auto-calibracion (en desarrollo)</p>
+						</li>
+					</ul>
+					<hr>								
 				</div>
 			</section>			
 		</div>
