--- a/headtrackr1.html
+++ b/headtrackr1.html
@@ -25,15 +25,7 @@
 	</script>
 	<script type="text/javascript">
 
-	var _gaq = _gaq || [];
-	_gaq.push(['_setAccount', 'UA-32642923-1']);
-	_gaq.push(['_trackPageview']);
 
-	(function() {
-		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	})();
 
 	</script>
 	
@@ -42,12 +34,12 @@
 	<style type="text/css">#xLabsCanvas{pointer-events:none;top:0;left:0;position:fixed;z-index:2147483646;}#xLabsCanvas.allow-pointer{pointer-events:auto;}</style>
 	
 	<!-- This includes Flocking and all its dependencies, including jQuery 2.1.3 and Infusion -->
-    <script src="/headtracker/dist/flocking-all.js"></script>    
-    <script src="/headtracker/sounds/impulse.js" type="text/javascript"></script>
+    <script src="dist/flocking-all.js"></script>    
+    <script src="sounds/impulse.js" type="text/javascript"></script>
 
 </head>
 <body>
-	<script src="/headtracker/js/headtrackr.js"></script>
+	<script src="js/headtrackr.js"></script>
 	
 	<canvas id="compare" width="640" height="480" style="display:none"></canvas>
 	<video id="vid" autoplay="" loop="" width="640" height="480"></video>
@@ -155,7 +147,7 @@
 			message2.innerHTML = "Head position in Y axis: " + event.y;
 			
 			//Separamos la pantalla en 4 partes. Cada una proporciona un sonido diferente:
-			if (event.x < videoInput.width/2) {
+			/*if (event.x < videoInput.width/2) {
 				if (event.y < videoInput.height/2) {
 					message3.innerHTML = "esquina arriba derecha";					
 					sound1.play();
@@ -169,11 +161,10 @@
 					message3.innerHTML = "esquina abajo izquierda";				
 					sound1.play();
 				}
-			}
+			}*/
 		});
 	</script>
 
-
-	<canvas id="xLabsCanvas" width="1366" height="275" style="display: none; width: 1366px; height: 275px; background: 0px 50%;"></canvas>
+	
 </body>
 </html>
